# create-repository

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  network-map.js  org-optimizer.html  pyproject.toml  tetris.html
.github/workflows/: ci.yml  codeql.yml
claude-hierarchy/: CLAUDE.md  README.md
claude-hierarchy/lib/principles/: architecture.md  keeping-it-simple.md  learning-as-we-go.md  making-it-work.md  privacy-and-data.md  security.md  testing.md
claude-hierarchy/lib/services/: _template.md
claude-hierarchy/lib/workflows/: code-review.md  fix-what-broke.md  new-feature.md  walk-me-through.md
claude-hierarchy/project-template/: CLAUDE.md
claude-hierarchy/projects/budget-app/: CLAUDE.md  README.md
config/: themes.yaml
docs/: DEPLOYMENT.md
pig-hotel-checker/app/: App.tsx  app.json  package-lock.json  package.json
pig-hotel-checker/app/src/screens/: AvailabilityScreen.tsx  MonthPickerScreen.tsx  RoomsScreen.tsx
pig-hotel-checker/app/src/services/: api.ts
pig-hotel-checker/app/src/types/: index.ts
pig-hotel-checker/backend/: package-lock.json  package.json  server.js
restaurant-radar/: App.tsx  app.json  eas.json  package-lock.json  package.json
restaurant-radar/src/components/: AddRestaurantModal.tsx  RestaurantCard.tsx
restaurant-radar/src/screens/: DiscoverScreen.tsx  HistoryScreen.tsx  ProfileScreen.tsx
restaurant-radar/src/services/: location.ts  matcher.ts  notifications.ts  scraper.ts
restaurant-radar/src/storage/: store.ts
restaurant-radar/src/types/: restaurant.ts
scripts/: analyse_real.py  run_real.py
src/email_analyzer/: __init__.py  analysis.py  app.py  cli.py  gmail_client.py  preprocess.py  themes.py  topics.py  visualizations.py
tests/: conftest.py  test_analysis.py  test_gmail_client.py  test_preprocess.py  test_themes.py  test_topics.py  test_visualizations.py
